--- a/data-architect.html
+++ b/data-architect.html
@@ -79,7 +79,7 @@ Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p>4 days ago ... You will join a talented team of software engineers, big data engineers, computer 
 vision experts and machine learning researchers, and are expected to get up?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/verifone/job/oK8aafwW'>Verifone Careers - Bigdata Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/verifone/job/oK8aafwW'>Verifone Careers - Bigdata Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... About Connect ? Payment Services ? Estate Management ? Verifone Marketplace ? 
 Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.</p>
@@ -92,7 +92,7 @@ Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://huron.avature.net/careers/JobDetail/Big-Data-Technical-Architect-Mumbai/5788'>Big Data Technical Architect - Mumbai - Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://huron.avature.net/careers/JobDetail/Big-Data-Technical-Architect-Mumbai/5788'>Big Data Technical Architect - Mumbai - Careers</a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -145,11 +145,11 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/data-architect-25164'>Data Architect - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-architect-25164'>Data Architect - RELX Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/technical-data-architect-11353'>Technical Data Architect - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/technical-data-architect-11353'>Technical Data Architect - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... The Architect will play a critical role in designing, developing and implementing 
 high performing applications using NOSQL DB and BigData...</p>
@@ -178,7 +178,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light">Hilversum, Netherlands</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/endo-pharma/job/ojsmafw1'>Endo Pharmaceuticals Inc. Careers - Senior Data Center Operations Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/endo-pharma/job/ojsmafw1'>Endo Pharmaceuticals Inc. Careers - Senior Data Center Operations Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -212,7 +212,7 @@ best?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Owns data design solution and related artifacts of one or more assigned domain. 
 Acts as a data SME for those domains. Responsible for all issues and its?...</p>
@@ -246,7 +246,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/wap8N4vrNM/BI-Data-Architect'>BI Data Architect - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/wap8N4vrNM/BI-Data-Architect'>BI Data Architect - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -284,7 +284,7 @@ class?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zgfarchitects.applytojob.com/apply/ocH1PyAbN4/Architectural-Data-Analyst'>Architectural Data Analyst - ZGF Architects - Career Page</a></h5> 
+<h5><a href='http://zgfarchitects.applytojob.com/apply/ocH1PyAbN4/Architectural-Data-Analyst'>Architectural Data Analyst - ZGF Architects - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -300,7 +300,7 @@ class?...</p>
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691372472-senior-data-analytics-architect'>CapTech Consulting Senior Data &amp; Analytics Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691372472-senior-data-analytics-architect'>CapTech Consulting Senior Data &amp; Analytics Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -369,7 +369,7 @@ implementation of ETL processes throughout the design, build and maintenance
 <p>Jun 24, 2019 ... We're looking for a GCP Data Architect who can design and implement modern 
 architecture for a diverse set of customers and industries. The ideal candidate?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -381,7 +381,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">Colorado, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://strongbox-data-solution.workable.com/j/6D058482DD'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
+<h5><a href='https://strongbox-data-solution.workable.com/j/6D058482DD'>StrongBox Data Solutions - Jobs: Sales driven Solutions Architect / Sales Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -434,7 +434,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on:: 2019-06-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/h3d31emchei4baa74ngiryd3gw'>Solutions Data Architect ($200K) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/h3d31emchei4baa74ngiryd3gw'>Solutions Data Architect ($200K) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
@@ -459,7 +459,7 @@ bricks-and-mortar retail world with innovative products that fuel...</p>
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/datacom.co.nz/ffdacd00-8dae-4360-8f6d-97f41d27665a'>Datacom - Principal Infrastructure Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/ffdacd00-8dae-4360-8f6d-97f41d27665a'>Datacom - Principal Infrastructure Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
